[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select  = [
    # isort
    "I001",
]

[project]
name = "bisky"
version = "0.1.0"
# description = "A clone of LetterLoop"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "click",
    "ipython",
    "ipython-autoimport",
    "ipython-autotime",
    "requests",
    "atproto",
    "uvicorn>=0.32.1",
    "fastapi>=0.115.5",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
bisky = "dev_util.dev:dev"
